feat(templates): add tag navigation links to header
- Display popular tags in navigation bar
- Support active state for current tag
- Include conditional active class for Home link

--- a/internal/view/templates/layouts/base.html
+++ b/internal/view/templates/layouts/base.html
@@ -22,7 +22,12 @@
 </head>
 <body>
     <nav class="navigation">
-        <a href="/">Home</a>
+        <a href="/" class="{{if not .ActiveTag}}active{{end}}">Home</a>
+        {{range .PopularTags}}
+        <a href="/tag/{{.Name}}" class="tag-link {{if eq $.ActiveTag .Name}}active{{end}}">
+            {{.Name}}
+        </a>
+        {{end}}
     </nav>
     <main class="main">{{.Content}}</main>
 </body>
